--- a/bot/pom.xml
+++ b/bot/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>bot</name>
-    <description>xiaoACE's-Kook-Bot</description>
+    <description>Demo project for Spring Boot</description>
 
     <properties>
         <java.version>17</java.version>
@@ -63,6 +63,12 @@
             <version>2.3.7.RELEASE</version>
         </dependency>
 
+        <!--https://hutool.cn/-->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.5</version>
+        </dependency>
 
     </dependencies>
 
